--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "import-cadets": "tsx scripts/importCadets.ts",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "firebase": "^10.14.1",
@@ -23,6 +25,7 @@
     "gh-pages": "^6.1.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
     "vite-plugin-pwa": "^0.17.4"
