--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist",
+    "deploy": "npm run build && node -e \"require('fs').writeFileSync('dist/.nojekyll', '')\" && gh-pages -d dist",
     "import-cadets": "tsx scripts/importCadets.ts",
     "postinstall": "npm run build"
   },
