Fix calendar file serving - update Firebase config and copy files to dist

--- a/firebase.json
+++ b/firebase.json
@@ -8,8 +8,27 @@
     ],
     "rewrites": [
       {
+        "source": "**/*.ics",
+        "destination": "/**/*.ics"
+      },
+      {
+        "source": "**/calendar-qr.html",
+        "destination": "/calendar-qr.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
+      }
+    ],
+    "headers": [
+      {
+        "source": "**/*.ics",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "text/calendar; charset=utf-8"
+          }
+        ]
       }
     ]
   },
