--- a/firebase.json
+++ b/firebase.json
@@ -8,14 +8,6 @@
     ],
     "rewrites": [
       {
-        "source": "**/*.ics",
-        "destination": "/**/*.ics"
-      },
-      {
-        "source": "**/calendar-qr.html",
-        "destination": "/calendar-qr.html"
-      },
-      {
         "source": "**",
         "destination": "/index.html"
       }
@@ -27,6 +19,10 @@
           {
             "key": "Content-Type",
             "value": "text/calendar; charset=utf-8"
+          },
+          {
+            "key": "Content-Disposition",
+            "value": "attachment; filename=rotc-training-schedule.ics"
           }
         ]
       }
